--- a/gw/components/CMakeLists.txt
+++ b/gw/components/CMakeLists.txt
@@ -41,7 +41,7 @@ add_subdirectory(sdspi)
 add_subdirectory(vera)
 add_subdirectory(wbuart)
 add_subdirectory(riscv-dbg)
-add_subdirectory(wb_gpio)
+add_subdirectory(gpio)
 add_subdirectory(litedram)
 add_subdirectory(ibex_wb_core)
 add_subdirectory(ibex)
