--- a/gw/components/boxlambda_soc/Bender.yml
+++ b/gw/components/boxlambda_soc/Bender.yml
@@ -9,7 +9,7 @@ dependencies:
   # Path dependency.
   wb_dp_ram: { path: "../../components/wb_dp_ram" }
   wbxbar: { path: "../../components/wbxbar" }
-  wb_gpio: { path: "../../components/wb_gpio" }
+  gpio: { path: "../../components/gpio" }
   wbuart: { path: "../../components/wbuart" }
   ibex_wb_common: { path: "../../components/ibex_wb_common" }
   ibex_wb_core: { path: "../../components/ibex_wb_core" }
