--- a/sw/projects/hello_world/CMakeLists.txt
+++ b/sw/projects/hello_world/CMakeLists.txt
@@ -1,7 +1,6 @@
 add_executable(hello_world
  EXCLUDE_FROM_ALL
     hello.c
- ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/gpio.c
  ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/utils.c
 )
 
@@ -11,3 +10,5 @@ target_compile_options(hello_world
 
 #Function defined in parent CMakeLists.txt file:
 link_and_create_mem_file(hello_world ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
+
+target_link_libraries(hello_world gpio)
