--- a/sw/projects/picorv_dma_sys_test_ext/CMakeLists.txt
+++ b/sw/projects/picorv_dma_sys_test_ext/CMakeLists.txt
@@ -3,7 +3,6 @@
 add_executable(picorv_dma_sys_test_ext
  EXCLUDE_FROM_ALL
  picorv_dma_sys_test_ext.c
- ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/gpio.c
  ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/utils.c
 )
 
@@ -29,4 +28,5 @@ target_include_directories(picorv_dma_sys_test_ext
 link_and_create_mem_file(picorv_dma_sys_test_ext
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(picorv_dma_sys_test_ext picorv_dma vera sdram)
+target_link_libraries(picorv_dma_sys_test_ext picorv_dma vera sdram gpio)
+
