--- a/sw/projects/sdspi_test/CMakeLists.txt
+++ b/sw/projects/sdspi_test/CMakeLists.txt
@@ -2,7 +2,6 @@ add_executable(sdspi_test
  EXCLUDE_FROM_ALL
  sdspi_test_main.c
  sdtest.c
- ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/gpio.c
  ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/utils.c
 )
 
@@ -18,3 +17,5 @@ target_include_directories(sdspi_test
 
 #Function defined in parent CMakeLists.txt file:
 link_and_create_mem_file(sdspi_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
+
+target_link_libraries(sdspi_test gpio)
