--- a/sw/projects/stsound_test/CMakeLists.txt
+++ b/sw/projects/stsound_test/CMakeLists.txt
@@ -1,7 +1,6 @@
 add_executable(stsound_test
  EXCLUDE_FROM_ALL
  stsound_test.cpp
- ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/gpio.c
  ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/utils.c
 )
 
@@ -25,4 +24,5 @@ endif()
 #Function defined in parent CMakeLists.txt file:
 link_and_create_mem_file(stsound_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(stsound_test sdram stsound fatfs)
+target_link_libraries(stsound_test sdram stsound fatfs gpio)
+
