--- a/sw/projects/usb_hid_sys_test/CMakeLists.txt
+++ b/sw/projects/usb_hid_sys_test/CMakeLists.txt
@@ -3,7 +3,6 @@
 add_executable(usb_hid_sys_test
  EXCLUDE_FROM_ALL
  usb_hid_sys_test.cpp
- ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/gpio.c
  ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/utils.c
 )
 
@@ -15,4 +14,4 @@ target_compile_options(usb_hid_sys_test
 link_and_create_mem_file(usb_hid_sys_test
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(usb_hid_sys_test usb_hid)
+target_link_libraries(usb_hid_sys_test usb_hid gpio)
