--- a/sw/projects/ym2149_test/CMakeLists.txt
+++ b/sw/projects/ym2149_test/CMakeLists.txt
@@ -1,7 +1,6 @@
 add_executable(ym2149_test
  EXCLUDE_FROM_ALL
  main.c
- ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/gpio.c
  ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/utils.c
 )
 
@@ -17,3 +16,5 @@ target_include_directories(ym2149_test
 
 #Function defined in parent CMakeLists.txt file:
 link_and_create_mem_file(ym2149_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
+
+target_link_libraries(ym2149_test gpio)
