--- a/sw/projects/gpios_timers_and_irqs/CMakeLists.txt
+++ b/sw/projects/gpios_timers_and_irqs/CMakeLists.txt
@@ -1,28 +1,28 @@
 
-add_executable(timers_and_irqs
+add_executable(gpios_timers_and_irqs
  EXCLUDE_FROM_ALL
- timers_and_irqs.c
+ gpios_timers_and_irqs.c
  ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/utils.c
 )
 
 #Dependency on the PicoRV irq_in_out test program.
 add_dependencies(
- timers_and_irqs
+ gpios_timers_and_irqs
  picorv_irq_in_out
 )
 
-target_compile_options(timers_and_irqs
+target_compile_options(gpios_timers_and_irqs
  PRIVATE
   -O2 -g
 )
 
-target_include_directories(timers_and_irqs
+target_include_directories(gpios_timers_and_irqs
     PRIVATE
     ${CMAKE_BINARY_DIR}/sw/components/picorv_dma/test/
 )
 
-link_and_create_mem_file(timers_and_irqs
+link_and_create_mem_file(gpios_timers_and_irqs
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(timers_and_irqs timer picorv_dma gpio)
+target_link_libraries(gpios_timers_and_irqs timer picorv_dma gpio)
 
