--- a/sw/projects/hello_world/CMakeLists.txt
+++ b/sw/projects/hello_world/CMakeLists.txt
@@ -1,14 +1,18 @@
 add_executable(hello_world
  EXCLUDE_FROM_ALL
     hello.c
- ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/utils.c
 )
 
 #Setting the -g flag for the hello_dbg build testing GDB access.
 target_compile_options(hello_world
  PRIVATE -g)
 
+target_include_directories(hello_world
+    PRIVATE
+  ${PROJECT_SOURCE_DIR}/sw/components/platform/
+)
+
 #Function defined in parent CMakeLists.txt file:
 link_and_create_mem_file(hello_world ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(hello_world gpio)
+target_link_libraries(hello_world gpio mcycle)
