--- a/sw/projects/spiflash_test/CMakeLists.txt
+++ b/sw/projects/spiflash_test/CMakeLists.txt
@@ -3,7 +3,6 @@
 add_executable(spiflash_test
  EXCLUDE_FROM_ALL
  spiflash_test.cpp
- ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/utils.c
 )
 
 target_compile_options(spiflash_test
@@ -11,11 +10,16 @@ target_compile_options(spiflash_test
   -O2 -g
 )
 
+target_include_directories(spiflash_test
+    PRIVATE
+  ${PROJECT_SOURCE_DIR}/sw/components/platform/
+)
+
 #spiflash_test is linked as a flash memory image.
 link_and_create_mem_file(spiflash_test
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
 
-target_link_libraries(spiflash_test flashdrvr sdram gpio)
+target_link_libraries(spiflash_test flashdrvr sdram gpio mcycle)
 
 add_flash_sw_target(spiflash_test)
 
@@ -24,7 +28,6 @@ add_flash_sw_target(spiflash_test)
 add_executable(spiflash_test_ram
  EXCLUDE_FROM_ALL
  spiflash_test.cpp
- ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/utils.c
 )
 
 target_compile_options(spiflash_test_ram
@@ -36,5 +39,5 @@ target_compile_options(spiflash_test_ram
 link_and_create_mem_file(spiflash_test_ram
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(spiflash_test_ram flashdrvr sdram gpio)
+target_link_libraries(spiflash_test_ram flashdrvr sdram gpio mcycle)
 
