--- a/sw/projects/stsound_test/CMakeLists.txt
+++ b/sw/projects/stsound_test/CMakeLists.txt
@@ -1,13 +1,13 @@
 add_executable(stsound_test
  EXCLUDE_FROM_ALL
  stsound_test.cpp
- ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/utils.c
 )
 
 target_include_directories(stsound_test
     PRIVATE
  ${PROJECT_SOURCE_DIR}/sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/
  ${PROJECT_SOURCE_DIR}/sw/components/ym2149_sys_hal/
+  ${PROJECT_SOURCE_DIR}/sw/components/platform/
 )
 
 target_compile_options(stsound_test
@@ -24,5 +24,5 @@ endif()
 #Function defined in parent CMakeLists.txt file:
 link_and_create_mem_file(stsound_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(stsound_test sdram stsound fatfs gpio)
+target_link_libraries(stsound_test sdram stsound fatfs gpio mcycle)
 
