--- a/gw/projects/timer_uart_gpio_irqs/CMakeLists.txt
+++ b/gw/projects/timer_uart_gpio_irqs/CMakeLists.txt
@@ -8,8 +8,8 @@ endif()
 #gw_project_rules() function is defined in the parent CMakeLists.txt.
 gw_project_rules(
     TOP_MODULE ${top_module}
-    PROJECT_NAME gpios_timers_and_irqs
-    MEM_FILE_TARGET gpios_timers_and_irqs
+    PROJECT_NAME timer_uart_gpio_irqs
+    MEM_FILE_TARGET timer_uart_gpio_irqs
     VERILATOR_CPP_FLAGS
         "-I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/ -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang"
     VERILATOR_LD_FLAGS
@@ -17,7 +17,7 @@ gw_project_rules(
 )
 
 #Add testcase.
-add_test(NAME gpios_timers_and_irqs_test
+add_test(NAME timer_uart_gpio_irqs_test
     COMMAND ./Vmodel
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 )
