--- a/sw/projects/ddr_test/CMakeLists.txt
+++ b/sw/projects/ddr_test/CMakeLists.txt
@@ -2,7 +2,11 @@ add_executable(ddr_test
     EXCLUDE_FROM_ALL
       ddr_test.c
       memtest.c
-      ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/utils.c
+)
+
+target_include_directories(ddr_test
+    PRIVATE
+        ${PROJECT_SOURCE_DIR}/sw/components/platform/
 )
 
 if(CMAKE_BUILD_TYPE STREQUAL "sim")
@@ -19,4 +23,4 @@ target_compile_options(ddr_test
 #Function defined in parent CMakeLists.txt file:
 link_and_create_mem_file(ddr_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(ddr_test sdram gpio)
+target_link_libraries(ddr_test sdram gpio mcycle)
