--- a/sw/projects/fatfs_test/CMakeLists.txt
+++ b/sw/projects/fatfs_test/CMakeLists.txt
@@ -8,7 +8,12 @@ target_compile_options(fatfs_test
   -O2 -g
 )
 
+target_include_directories(fatfs_test
+    PRIVATE
+  ${PROJECT_SOURCE_DIR}/sw/components/platform/
+)
+
 #Function defined in parent CMakeLists.txt file:
 link_and_create_mem_file(fatfs_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(fatfs_test fatfs)
+target_link_libraries(fatfs_test fatfs mcycle)
