--- a/gw/projects/vera_integrated/CMakeLists.txt
+++ b/gw/projects/vera_integrated/CMakeLists.txt
@@ -27,3 +27,6 @@ add_test(NAME vera_integrated_test
     COMMAND ${CMAKE_CURRENT_LIST_DIR}/test/test.sh ${PROJECT_SOURCE_DIR}
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 )
+
+#This test requires a longer timeout.
+set_tests_properties(vera_integrated_test PROPERTIES TIMEOUT 200)
