--- a/sw/projects/timer_uart_gpio_irqs/CMakeLists.txt
+++ b/sw/projects/timer_uart_gpio_irqs/CMakeLists.txt
@@ -18,11 +18,10 @@ target_compile_options(timer_uart_gpio_irqs
 target_include_directories(timer_uart_gpio_irqs
     PRIVATE
     ${CMAKE_BINARY_DIR}/sw/components/picorv_dma/test/
-    ${PROJECT_SOURCE_DIR}/sw/components/platform/
 )
 
 link_and_create_mem_file(timer_uart_gpio_irqs
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(timer_uart_gpio_irqs timer picorv_dma gpio mcycle)
+target_link_libraries(timer_uart_gpio_irqs timer picorv_dma gpio riscv interrupts)
 
