--- a/sw/projects/ddr_test/CMakeLists.txt
+++ b/sw/projects/ddr_test/CMakeLists.txt
@@ -4,11 +4,6 @@ add_executable(ddr_test
       memtest.c
 )
 
-target_include_directories(ddr_test
-    PRIVATE
-        ${PROJECT_SOURCE_DIR}/sw/components/platform/
-)
-
 if(CMAKE_BUILD_TYPE STREQUAL "sim")
   target_compile_definitions(ddr_test PRIVATE -DMEMTEST_SIZE=32768)
 else() #fpga:
@@ -23,4 +18,4 @@ target_compile_options(ddr_test
 #Function defined in parent CMakeLists.txt file:
 link_and_create_mem_file(ddr_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(ddr_test sdram gpio mcycle)
+target_link_libraries(ddr_test sdram gpio riscv)
