--- a/sw/projects/spiflash_test/CMakeLists.txt
+++ b/sw/projects/spiflash_test/CMakeLists.txt
@@ -10,16 +10,11 @@ target_compile_options(spiflash_test
   -O2 -g
 )
 
-target_include_directories(spiflash_test
-    PRIVATE
-  ${PROJECT_SOURCE_DIR}/sw/components/platform/
-)
-
 #spiflash_test is linked as a flash memory image.
 link_and_create_mem_file(spiflash_test
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
 
-target_link_libraries(spiflash_test flashdrvr sdram gpio mcycle)
+target_link_libraries(spiflash_test flashdrvr sdram gpio riscv)
 
 add_flash_sw_target(spiflash_test)
 
@@ -39,5 +34,5 @@ target_compile_options(spiflash_test_ram
 link_and_create_mem_file(spiflash_test_ram
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(spiflash_test_ram flashdrvr sdram gpio mcycle)
+target_link_libraries(spiflash_test_ram flashdrvr sdram gpio riscv)
 
