--- a/sw/projects/usb_hid_sys_test/CMakeLists.txt
+++ b/sw/projects/usb_hid_sys_test/CMakeLists.txt
@@ -10,12 +10,7 @@ target_compile_options(usb_hid_sys_test
   -O2 -g
 )
 
-target_include_directories(usb_hid_sys_test
-    PRIVATE
-  ${PROJECT_SOURCE_DIR}/sw/components/platform/
-)
-
 link_and_create_mem_file(usb_hid_sys_test
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(usb_hid_sys_test usb_hid gpio mcycle)
+target_link_libraries(usb_hid_sys_test usb_hid gpio riscv interrupts)
