--- a/sw/projects/ym2149_test/CMakeLists.txt
+++ b/sw/projects/ym2149_test/CMakeLists.txt
@@ -11,10 +11,9 @@ target_compile_options(ym2149_test
 target_include_directories(ym2149_test
     PRIVATE
   ${PROJECT_SOURCE_DIR}/sw/components/ym2149_sys_hal/
-  ${PROJECT_SOURCE_DIR}/sw/components/platform/
 )
 
 #Function defined in parent CMakeLists.txt file:
 link_and_create_mem_file(ym2149_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(ym2149_test gpio mcycle)
+target_link_libraries(ym2149_test gpio riscv)
