--- a/.gitmodules
+++ b/.gitmodules
@@ -63,3 +63,6 @@
 [submodule "sub/gpio"]
 	path = sub/gpio
 	url = https://github.com/epsilon537/gpio
+[submodule "sub/i2c"]
+	path = sub/i2c
+	url = https://github.com/epsilon537/i2c
