i2c and rtcc tests passing

--- a/sw/components/CMakeLists.txt
+++ b/sw/components/CMakeLists.txt
@@ -12,5 +12,8 @@ add_subdirectory(gpio)
 add_subdirectory(uart)
 add_subdirectory(riscv)
 add_subdirectory(interrupts)
-add_subdirectory(i2c_master)
+add_subdirectory(i2c)
+add_subdirectory(rtcc)
+add_subdirectory(timelib)
+add_subdirectory(embedded-cli)
 
