--- a/sw/projects/CMakeLists.txt
+++ b/sw/projects/CMakeLists.txt
@@ -69,4 +69,5 @@ add_subdirectory(spiflash_test)
 add_subdirectory(cmem_to_flash_vector)
 add_subdirectory(timer_uart_gpio_irqs)
 add_subdirectory(i2c_test)
+add_subdirectory(rtcc_test)
 
