--- a/gw/projects/CMakeLists.txt
+++ b/gw/projects/CMakeLists.txt
@@ -366,4 +366,5 @@ add_subdirectory(usb_hid_sys_test)
 add_subdirectory(spiflash_test)
 add_subdirectory(timer_uart_gpio_irqs)
 add_subdirectory(i2c_test)
+add_subdirectory(rtcc_test)
 
