--- a/sw/components/i2c/CMakeLists.txt
+++ b/sw/components/i2c/CMakeLists.txt
@@ -1,17 +1,19 @@
-add_library(i2c_master)
+add_library(i2c)
 
-target_sources(i2c_master
+target_sources(i2c
     PRIVATE
-    i2c_master_hal.c
+    i2c.cpp
 )
 
-target_compile_options(i2c_master
+target_compile_options(i2c
  PRIVATE
   -O2 -g
 )
 
 #Paths to include files users of usb_hid are expected to use.
-target_include_directories(i2c_master
+target_include_directories(i2c
     PUBLIC
         ${CMAKE_CURRENT_LIST_DIR}
 )
+
+target_link_libraries(i2c riscv)
