--- a/sw/projects/i2c_test/CMakeLists.txt
+++ b/sw/projects/i2c_test/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 add_executable(i2c_test
  EXCLUDE_FROM_ALL
- i2c_test.c
+ i2c_test.cpp
 )
 
 target_compile_options(i2c_test
@@ -12,5 +12,5 @@ target_compile_options(i2c_test
 link_and_create_mem_file(i2c_test
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(i2c_test i2c_master gpio interrupts riscv)
+target_link_libraries(i2c_test sdram i2c gpio embedded-cli riscv)
 
