--- a/sw/projects/rtcc_test/CMakeLists.txt
+++ b/sw/projects/rtcc_test/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_executable(rtcc_test_ram
  EXCLUDE_FROM_ALL
  rtcc_test.cpp
+ ${PROJECT_SOURCE_DIR}/sw/projects/i2c_test/cli.cpp
 )
 
 target_compile_options(rtcc_test_ram
@@ -14,9 +15,15 @@ link_and_create_mem_file(rtcc_test_ram
 
 target_link_libraries(rtcc_test_ram sdram rtcc i2c gpio riscv embedded-cli)
 
+target_include_directories(rtcc_test_ram
+    PUBLIC
+       ${PROJECT_SOURCE_DIR}/sw/projects/i2c_test/
+)
+
 add_executable(rtcc_test
  EXCLUDE_FROM_ALL
  rtcc_test.cpp
+ ${PROJECT_SOURCE_DIR}/sw/projects/i2c_test/cli.cpp
 )
 
 target_compile_options(rtcc_test
@@ -28,6 +35,11 @@ link_and_create_mem_file(rtcc_test
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
 
 target_link_libraries(rtcc_test sdram rtcc i2c gpio riscv embedded-cli)
+
+target_include_directories(rtcc_test
+    PUBLIC
+       ${PROJECT_SOURCE_DIR}/sw/projects/i2c_test/
+)
 
 add_flash_sw_target(rtcc_test)
 
