--- a/sw/projects/rtcc_test/CMakeLists.txt
+++ b/sw/projects/rtcc_test/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_executable(rtcc_test_ram
  EXCLUDE_FROM_ALL
  rtcc_test.cpp
+ rtcc_cli.cpp
  ${PROJECT_SOURCE_DIR}/sw/projects/i2c_test/i2c_cli.cpp
 )
 
@@ -13,7 +14,7 @@ target_compile_options(rtcc_test_ram
 link_and_create_mem_file(rtcc_test_ram
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(rtcc_test_ram sdram rtcc i2c gpio riscv embedded-cli)
+target_link_libraries(rtcc_test_ram sdram rtcc i2c gpio riscv embedded_cli peek_poke_cli)
 
 target_include_directories(rtcc_test_ram
     PUBLIC
@@ -23,6 +24,7 @@ target_include_directories(rtcc_test_ram
 add_executable(rtcc_test
  EXCLUDE_FROM_ALL
  rtcc_test.cpp
+ rtcc_cli.cpp
  ${PROJECT_SOURCE_DIR}/sw/projects/i2c_test/i2c_cli.cpp
 )
 
@@ -34,7 +36,7 @@ target_compile_options(rtcc_test
 link_and_create_mem_file(rtcc_test
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
 
-target_link_libraries(rtcc_test sdram rtcc i2c gpio riscv embedded-cli)
+target_link_libraries(rtcc_test sdram rtcc i2c gpio riscv embedded_cli peek_poke_cli)
 
 target_include_directories(rtcc_test
     PUBLIC
