--- a/sw/projects/CMakeLists.txt
+++ b/sw/projects/CMakeLists.txt
@@ -70,4 +70,5 @@ add_subdirectory(cmem_to_flash_vector)
 add_subdirectory(timer_uart_gpio_irqs)
 add_subdirectory(i2c_test)
 add_subdirectory(rtcc_test)
+add_subdirectory(reset_test)
 
