--- a/gw/projects/reset_test/Bender.yml
+++ b/gw/projects/reset_test/Bender.yml
@@ -3,7 +3,7 @@
 # Package metadata. Required.
 package:
   # The name of the package. Required.
-  name: rtcc_test
+  name: reset_test
 
 dependencies:
   # Path dependency.
@@ -45,4 +45,9 @@ sources:
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
       - ../boxlambda_top/rtl/boxlambda_top.sv
-
+  - target: verilator
+    files:
+      - sim/sim_main.cpp
+      - ../../components/spiflash/sim/flashsim.cpp
+      - ../boxlambda_top/sim/sim_main.sv
+      - ../boxlambda_top/lint.vlt
