--- a/gw/projects/CMakeLists.txt
+++ b/gw/projects/CMakeLists.txt
@@ -366,6 +366,8 @@ add_subdirectory(usb_hid_sys_test)
 add_subdirectory(spiflash_test)
 add_subdirectory(timer_uart_gpio_irqs)
 add_subdirectory(i2c_test)
-add_subdirectory(rtcc_test)
+if(CMAKE_BUILD_TYPE STREQUAL "fpga")
+  add_subdirectory(rtcc_test)
+endif()
 add_subdirectory(reset_test)
 
