--- a/gw/projects/j1b_test/CMakeLists.txt
+++ b/gw/projects/j1b_test/CMakeLists.txt
@@ -9,7 +9,7 @@ endif()
 gw_project_rules(
     TOP_MODULE ${top_module}
     PROJECT_NAME j1b_test
-    MEM_FILE_TARGET cmem_to_flash_vector
+    MEM_FILE_TARGET j1b_test_ram
     VERILATOR_CPP_FLAGS
         "-I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/ -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang -I${PROJECT_SOURCE_DIR}/sub/wbi2c/bench/cpp"
     VERILATOR_LD_FLAGS
