project build fixes for vivado_ip target

--- a/gw/projects/sdspi_test/Bender.yml
+++ b/gw/projects/sdspi_test/Bender.yml
@@ -13,7 +13,7 @@ sources:
   - target: constraints
     files:
       - ../boxlambda_top/constrs/boxlambda_soc.xdc
-  - target: arty-a7-35
+  - target: all(arty-a7-35, not(vivado_ip))
     defines:
       VRAM_SIZE_BYTES: 65536
       DPRAM_SIZE_BYTES: 65536
@@ -27,7 +27,7 @@ sources:
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
       - ../boxlambda_top/rtl/boxlambda_top.sv
-  - target: arty-a7-100
+  - target: all(arty-a7-100, not(vivado_ip))
     defines:
       VRAM_SIZE_BYTES: 131072
       DPRAM_SIZE_BYTES: 262144
