--- a/gw/projects/timer_uart_gpio_irqs/Bender.yml
+++ b/gw/projects/timer_uart_gpio_irqs/Bender.yml
@@ -13,10 +13,10 @@ sources:
   - target: constraints
     files:
       - ../boxlambda_top/constrs/boxlambda_soc.xdc
-  - target: arty-a7-35
+  - target: all(arty-a7-100, not(vivado_ip))
     defines:
-      VRAM_SIZE_BYTES: 65536
-      DPRAM_SIZE_BYTES: 65536
+      VRAM_SIZE_BYTES: 131072
+      DPRAM_SIZE_BYTES: 262144
       NO_MODPORT_EXPRESSIONS: ~
       DEBUG_MODULE_ACTIVE: ~
       YM2149: ~
@@ -25,13 +25,14 @@ sources:
       VERA: ~
       PICORV_DMA: ~
       SPIFLASH: ~
+      I2C: ~
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
       - ../boxlambda_top/rtl/boxlambda_top.sv
-  - target: arty-a7-100
+  - target: all(arty-a7-35, not(vivado_ip))
     defines:
-      VRAM_SIZE_BYTES: 131072
-      DPRAM_SIZE_BYTES: 262144
+      VRAM_SIZE_BYTES: 65536
+      DPRAM_SIZE_BYTES: 65536
       NO_MODPORT_EXPRESSIONS: ~
       DEBUG_MODULE_ACTIVE: ~
       YM2149: ~
