--- a/gw/projects/dfx_test/Bender.yml
+++ b/gw/projects/dfx_test/Bender.yml
@@ -14,7 +14,7 @@ sources:
   - target: constraints
     files:
       - ../boxlambda_top/constrs/boxlambda_soc.xdc
-  - target: arty-a7-35
+  - target: all(arty-a7-35, not(vivado_ip))
     defines:
       VRAM_SIZE_BYTES: 65536
       DPRAM_SIZE_BYTES: 65536
@@ -30,7 +30,7 @@ sources:
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
       - ../boxlambda_top/rtl/boxlambda_top.sv
-  - target: all(arty-a7-100, vivado)
+  - target: all(arty-a7-100, not(vivado_ip))
     defines:
       VRAM_SIZE_BYTES: 131072
       DPRAM_SIZE_BYTES: 262144
@@ -44,22 +44,6 @@ sources:
       SPIFLASH: ~
       I2C: ~
       DFX: ~
-      #TRACE_ALL_INSTRUCTIONS: ~
-    files:
-      - ../boxlambda_top/rtl/boxlambda_top.sv
-  - target: all(arty-a7-100, verilator)
-    defines:
-      VRAM_SIZE_BYTES: 131072
-      DPRAM_SIZE_BYTES: 262144
-      NO_MODPORT_EXPRESSIONS: ~
-      DEBUG_MODULE_ACTIVE: ~
-      YM2149: ~
-      SDSPI: ~
-      DRAM: ~
-      VERA: ~
-      PICORV_DMA: ~
-      SPIFLASH: ~
-      I2C: ~
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
       - ../boxlambda_top/rtl/boxlambda_top.sv
