--- a/gw/components/CMakeLists.txt
+++ b/gw/components/CMakeLists.txt
@@ -109,14 +109,18 @@ add_subdirectory(boxlambda_clk_gen)
 add_subdirectory(wbxbar)
 add_subdirectory(wb_dp_ram)
 add_subdirectory(boxlambda_soc)
-add_subdirectory(vs0_empty)
-add_subdirectory(vs0_stub)
-add_subdirectory(vs0_j1b)
+if(CMAKE_BUILD_TYPE STREQUAL "fpga")
+  add_subdirectory(vs0_empty)
+  add_subdirectory(vs0_stub)
+  add_subdirectory(vs0_j1b)
+endif()
 add_subdirectory(usb_hid_host)
 add_subdirectory(usb_hid_device)
 add_subdirectory(cdc_cells)
 add_subdirectory(spiflash)
 add_subdirectory(wb_timer)
 add_subdirectory(i2c_master)
-add_subdirectory(wb_dfx_controller)
+if(CMAKE_BUILD_TYPE STREQUAL "fpga")
+  add_subdirectory(wb_dfx_controller)
+endif()
 
