--- a/gw/projects/reset_test/Bender.yml
+++ b/gw/projects/reset_test/Bender.yml
@@ -8,7 +8,7 @@ package:
 dependencies:
   # Path dependency.
   boxlambda_soc: { path: "../../components/boxlambda_soc" }
-  blackbox0_empty: { path: "../../components/blackbox0_empty" }
+  vs0_stub: { path: "../../components/vs0_stub" }
 
 sources:
   - target: prj_constraints
