--- a/gw/components/boxlambda_soc/Bender.yml
+++ b/gw/components/boxlambda_soc/Bender.yml
@@ -30,9 +30,14 @@ dependencies:
 
 sources:
   #OOC
+  #Pulling in the vs0 stub to satisfy the lint checker.
+  #vs0_empty is no good because of undriven signals.
+  #FIXME: I would have prefered to use a target specific dependency instead of 
+  #pulling in a module, but I haven't been able to figure out the bender syntax
+  #for doing that.
   - target: boxlambda_soc
     files:
-     - ../vs0_stub/rtl/vs0.sv
+      - ../vs0_stub/rtl/vs0.sv
 
   #co-sim stuffs.
   - target: verilator
