--- a/gw/components/wb_dfx_controller/Bender.yml
+++ b/gw/components/wb_dfx_controller/Bender.yml
@@ -13,7 +13,7 @@ sources:
   - target: all(vivado_ip, arty-a7-100)
     files:
       - ../../ip/dfx_controller/dfx_controller_0.xci
-      - ../../ip/ila/ila_0.xci
+      #- ../../ip/ila/ila_0.xci
 
   - target: verilator
     files:
