--- a/gw/projects/fatfs_test/Bender.yml
+++ b/gw/projects/fatfs_test/Bender.yml
@@ -8,6 +8,7 @@ package:
 dependencies:
   # Path dependency.
   boxlambda_soc: { path: "../../components/boxlambda_soc" }
+  vs0_stub: { path: "../../components/vs0_stub" }
 
 sources:
   - target: prj_constraints
