--- a/sw/projects/dfx_test/CMakeLists.txt
+++ b/sw/projects/dfx_test/CMakeLists.txt
@@ -1,4 +1,9 @@
-#DFX test program
+# DFX test program to run on the dfx_test gateware build. The program presents
+# a CLI through which the user can live-load reconfigurable modules such as the
+# vs0_j1b core into the VS0 'black box' slot/partition of the BoxLambda SoC.
+
+# Note that this directory also contains a nuc.bin file. This is the Forth run-time firmware image to be loaded into
+# the J1B core after it has been DFX loaded into the SoC.
 
 add_executable(dfx_test
  EXCLUDE_FROM_ALL
@@ -14,7 +19,6 @@ target_compile_options(dfx_test
 
 target_include_directories(dfx_test
   PRIVATE
-  ${PROJECT_SOURCE_DIR}/sw/components/reset/
   ${PROJECT_SOURCE_DIR}/sw/components/dfx/
   ${PROJECT_SOURCE_DIR}/sw/components/vs0_hal/
 )
