--- a/gw/CMakeLists.txt
+++ b/gw/CMakeLists.txt
@@ -29,16 +29,14 @@ function(vivado_cmd cmd tcl_script)
   set(${cmd} "vivado -mode batch $VIVADO_FLAGS -source ${tcl_script} -tclargs ${_tcl_args}" PARENT_SCOPE)
 endfunction()
 
-#Function grouping common gateware build rules.
+#Function grouping common vivado gateware build rules.
 #TOP_MODULE: name of top module.
 #PRJ_COMP_NAME: project or component name, e.g. wbuart32
 #PRJ_CONSTRAINTS_FILE_LIST: Project constraints file list, if any.
 #MEM_FILE_LIST: Mem file list, if any.
-#VERILATOR_CPP_FLAGS: CPP flags to use when verilating. Usually empty.
-#VERILATOR_LD_FLAGS: LD flags to use when verilating. Usually empty.
-function (gw_common_rules)
+function (gw_common_rules_vivado)
   set(options)
-  set(oneValueArgs TOP_MODULE PRJ_COMP_NAME OOC PRJ_CONSTRAINTS_FILE_LIST MEM_FILE_LIST VERILATOR_CPP_FLAGS VERILATOR_LD_FLAGS)
+  set(oneValueArgs TOP_MODULE PRJ_COMP_NAME OOC PRJ_CONSTRAINTS_FILE_LIST MEM_FILE_LIST)
   set(multiValueArgs)
 
   cmake_parse_arguments(gw_common_rules
@@ -53,8 +51,141 @@ function (gw_common_rules)
   set(_prj_constraints_file_list ${gw_common_rules_PRJ_CONSTRAINTS_FILE_LIST})
   set(_ooc ${gw_common_rules_OOC})
   set(_mem_file_list ${gw_common_rules_MEM_FILE_LIST})
+
+  # Dummy output which is never actually produced. Anything that depends on
+  # this will always be rebuilt.
+  add_custom_command(
+        OUTPUT always_rebuild
+        COMMAND cmake -E echo
+        COMMENT
+            "always_rebuild dummy command."
+    )
+
+  add_custom_command(
+          OUTPUT
+              ${_prj_comp_name}.vivado_sources
+          BYPRODUCTS
+              ${CMAKE_CURRENT_BINARY_DIR}/${_prj_comp_name}.vivado_sources.dep
+          COMMAND
+              ${PROJECT_SOURCE_DIR}/scripts/bender_gen_vivado_sources_and_deps.sh ${CMAKE_CURRENT_LIST_DIR} ${_prj_comp_name}.vivado_sources ${CMAKE_CURRENT_BINARY_DIR}/project.runs/synth_1/${_top_module}.dcp ${BL_TARGET_FPGA} ${_prj_comp_name}
+          WORKING_DIRECTORY
+              ${CMAKE_CURRENT_BINARY_DIR}
+          DEPENDS
+              always_rebuild
+          COMMENT
+              "Generating vivado source list."
+          VERBATIM
+      )
+
+  #Extract any Vivado IPs (.xci files) referenced in the bender manifest
+  add_custom_command(
+        OUTPUT
+            ${_prj_comp_name}.vivado_ip_file_list
+        COMMAND
+            ${PROJECT_SOURCE_DIR}/scripts/bender_gen_vivado_ip_file_list.sh ${CMAKE_CURRENT_LIST_DIR} ${_prj_comp_name}.vivado_ip_file_list ${BL_TARGET_FPGA}
+        DEPENDS
+            always_rebuild
+        WORKING_DIRECTORY
+            ${CMAKE_CURRENT_BINARY_DIR}
+        COMMENT
+            "Generating Vivado IP file list."
+        VERBATIM
+    )
+
+  #Build Vivado command string for the vivado_create_project tcl script.
+  vivado_cmd(create_project_cmd ${PROJECT_SOURCE_DIR}/scripts/vivado_create_project.tcl
+                  -ooc ${_ooc}
+                  -part ${PART} -sources ${_prj_comp_name}.vivado_sources
+                  -vivado_ips ${_prj_comp_name}.vivado_ip_file_list
+                  -top ${_top_module})
+  #If a constraints file list is given, append it to the Vivado command string.
+  if (NOT ${_prj_constraints_file_list} STREQUAL "")
+      string(APPEND create_project_cmd " -prj_constraints " ${_prj_constraints_file_list})
+  endif()
+  #If a mem file list is given, append it to the Vivado command string.
+  if (NOT ${_mem_file_list} STREQUAL "")
+      string(APPEND create_project_cmd " -mem_files " ${_mem_file_list})
+  endif()
+
+  #Custom command executing the create_project command string.
+  #Notice that a dummy project.dep output is generated along with the actual project.xpr output.
+  #This is because project.xpr modification time updates every time we open the project file for synthesis or
+  #implementation. We can't use project.xpr as a dependency to detect if a re-synthesis is needed.
+  #project.dep on the other hand is only touched when the Vivado project file is actually created, so that one
+  #can be used as a dependency by the synthesis target.
+  add_custom_command(
+          OUTPUT
+              ${CMAKE_CURRENT_BINARY_DIR}/project.dep
+          COMMAND
+              bash -c ${create_project_cmd}
+          COMMAND
+              touch ${CMAKE_CURRENT_BINARY_DIR}/project.dep
+          BYPRODUCTS
+              ${CMAKE_CURRENT_BINARY_DIR}/project.xpr
+          WORKING_DIRECTORY
+              ${CMAKE_CURRENT_BINARY_DIR}
+          DEPENDS
+              ${_prj_comp_name}.vivado_ip_file_list
+              ${_prj_comp_name}.vivado_sources
+              ${_prj_constraints_file_list}
+              ${_mem_file_list}
+          COMMENT
+              "Creating Vivado project."
+          VERBATIM
+      )
+
+  #Build Vivado command string for the vivado_synth tcl script.
+  vivado_cmd(synth_cmd ${PROJECT_SOURCE_DIR}/scripts/vivado_synth.tcl
+          -project project.xpr -outputDir ${CMAKE_CURRENT_BINARY_DIR})
+
+  #Custom command executing the vivado synthesis command string.
+  add_custom_command(
+          OUTPUT
+              ${CMAKE_CURRENT_BINARY_DIR}/project.runs/synth_1/${_top_module}.dcp
+          COMMAND
+              bash -c ${synth_cmd}
+          WORKING_DIRECTORY
+              ${CMAKE_CURRENT_BINARY_DIR}
+          DEPENDS
+              ${CMAKE_CURRENT_BINARY_DIR}/project.dep
+          DEPFILE
+              ${CMAKE_CURRENT_BINARY_DIR}/${_prj_comp_name}.vivado_sources.dep
+          COMMENT
+              "Project or component synthesis."
+          VERBATIM
+      )
+
+  add_custom_target(${_prj_comp_name}_synth
+          WORKING_DIRECTORY
+              ${CMAKE_CURRENT_BINARY_DIR}
+          DEPENDS
+              ${CMAKE_CURRENT_BINARY_DIR}/project.runs/synth_1/${_top_module}.dcp
+          COMMENT
+              "Project or component synthesis target."
+      )
+endfunction()
+
+#Function grouping common verilator gateware build rules.
+#TOP_MODULE: name of top module.
+#PRJ_COMP_NAME: project or component name, e.g. wbuart32
+#MEM_FILE_LIST: Mem file list, if any.
+#VERILATOR_CPP_FLAGS: CPP flags to use when verilating. Usually empty.
+function (gw_common_rules_verilator)
+  set(options)
+  set(oneValueArgs TOP_MODULE PRJ_COMP_NAME MEM_FILE_LIST VERILATOR_CPP_FLAGS)
+  set(multiValueArgs)
+
+  cmake_parse_arguments(gw_common_rules
+        "${options}"
+        "${oneValueArgs}"
+        "${multiValueArgs}"
+        ${ARGN}
+    )
+
+  set(_top_module ${gw_common_rules_TOP_MODULE})
+  set(_prj_comp_name ${gw_common_rules_PRJ_COMP_NAME})
+  set(_mem_file_list ${gw_common_rules_MEM_FILE_LIST})
   set(_verilator_cpp_flags ${gw_common_rules_VERILATOR_CPP_FLAGS})
-  set(_verilator_ld_flags ${gw_common_rules_VERILATOR_LD_FLAGS})
 
   # Dummy output which is never actually produced. Anything that depends on
   # this will always be rebuilt.
@@ -112,111 +243,6 @@ function (gw_common_rules)
 
   #Include lint target in the lint_all dependency list.
   add_dependencies(lint_all ${_prj_comp_name}_lint)
-
-  if(CMAKE_BUILD_TYPE STREQUAL "fpga")
-    add_custom_command(
-            OUTPUT
-                ${_prj_comp_name}.vivado_sources
-            BYPRODUCTS
-                ${CMAKE_CURRENT_BINARY_DIR}/${_prj_comp_name}.vivado_sources.dep
-            COMMAND
-                ${PROJECT_SOURCE_DIR}/scripts/bender_gen_vivado_sources_and_deps.sh ${CMAKE_CURRENT_LIST_DIR} ${_prj_comp_name}.vivado_sources ${CMAKE_CURRENT_BINARY_DIR}/project.runs/synth_1/${_top_module}.dcp ${BL_TARGET_FPGA} ${_prj_comp_name}
-            WORKING_DIRECTORY
-                ${CMAKE_CURRENT_BINARY_DIR}
-            DEPENDS
-                always_rebuild
-            COMMENT
-                "Generating vivado source list."
-            VERBATIM
-        )
-
-    #Extract any Vivado IPs (.xci files) referenced in the bender manifest
-    add_custom_command(
-          OUTPUT
-              ${_prj_comp_name}.vivado_ip_file_list
-          COMMAND
-              ${PROJECT_SOURCE_DIR}/scripts/bender_gen_vivado_ip_file_list.sh ${CMAKE_CURRENT_LIST_DIR} ${_prj_comp_name}.vivado_ip_file_list ${BL_TARGET_FPGA}
-          DEPENDS
-              always_rebuild
-          WORKING_DIRECTORY
-              ${CMAKE_CURRENT_BINARY_DIR}
-          COMMENT
-              "Generating Vivado IP file list."
-          VERBATIM
-      )
-
-    #Build Vivado command string for the vivado_create_project tcl script.
-    vivado_cmd(create_project_cmd ${PROJECT_SOURCE_DIR}/scripts/vivado_create_project.tcl
-                    -ooc ${_ooc}
-                    -part ${PART} -sources ${_prj_comp_name}.vivado_sources
-                    -vivado_ips ${_prj_comp_name}.vivado_ip_file_list
-                    -top ${_top_module})
-    #If a constraints file list is given, append it to the Vivado command string.
-    if (NOT ${_prj_constraints_file_list} STREQUAL "")
-        string(APPEND create_project_cmd " -prj_constraints " ${_prj_constraints_file_list})
-    endif()
-    #If a mem file list is given, append it to the Vivado command string.
-    if (NOT ${_mem_file_list} STREQUAL "")
-        string(APPEND create_project_cmd " -mem_files " ${_mem_file_list})
-    endif()
-
-    #Custom command executing the create_project command string.
-    #Notice that a dummy project.dep output is generated along with the actual project.xpr output.
-    #This is because project.xpr modification time updates every time we open the project file for synthesis or
-    #implementation. We can't use project.xpr as a dependency to detect if a re-synthesis is needed.
-    #project.dep on the other hand is only touched when the Vivado project file is actually created, so that one
-    #can be used as a dependency by the synthesis target.
-    add_custom_command(
-            OUTPUT
-                ${CMAKE_CURRENT_BINARY_DIR}/project.dep
-            COMMAND
-                bash -c ${create_project_cmd}
-            COMMAND
-                touch ${CMAKE_CURRENT_BINARY_DIR}/project.dep
-            BYPRODUCTS
-                ${CMAKE_CURRENT_BINARY_DIR}/project.xpr
-            WORKING_DIRECTORY
-                ${CMAKE_CURRENT_BINARY_DIR}
-            DEPENDS
-                ${_prj_comp_name}.vivado_ip_file_list
-                ${_prj_comp_name}.vivado_sources
-                ${_prj_constraints_file_list}
-                ${_mem_file_list}
-            COMMENT
-                "Creating Vivado project."
-            VERBATIM
-        )
-
-    #Build Vivado command string for the vivado_synth tcl script.
-    vivado_cmd(synth_cmd ${PROJECT_SOURCE_DIR}/scripts/vivado_synth.tcl
-            -project project.xpr -outputDir ${CMAKE_CURRENT_BINARY_DIR})
-
-    #Custom command executing the vivado synthesis command string.
-    add_custom_command(
-            OUTPUT
-                ${CMAKE_CURRENT_BINARY_DIR}/project.runs/synth_1/${_top_module}.dcp
-            COMMAND
-                bash -c ${synth_cmd}
-            WORKING_DIRECTORY
-                ${CMAKE_CURRENT_BINARY_DIR}
-            DEPENDS
-                ${CMAKE_CURRENT_BINARY_DIR}/project.dep
-            DEPFILE
-                ${CMAKE_CURRENT_BINARY_DIR}/${_prj_comp_name}.vivado_sources.dep
-            COMMENT
-                "Project or component synthesis."
-            VERBATIM
-        )
-
-    add_custom_target(${_prj_comp_name}_synth
-            WORKING_DIRECTORY
-                ${CMAKE_CURRENT_BINARY_DIR}
-            DEPENDS
-                ${CMAKE_CURRENT_BINARY_DIR}/project.runs/synth_1/${_top_module}.dcp
-            COMMENT
-                "Project or component synthesis target."
-        )
-  endif()
 endfunction()
 
 add_subdirectory(components)
