--- a/gw/projects/spiflash_test/CMakeLists.txt
+++ b/gw/projects/spiflash_test/CMakeLists.txt
@@ -1,3 +1,16 @@
+#This is a dummy target. It doesn't build anything. It just collects the spiflash_test
+#sw executable as a dependency for the testcase below. Sadly, add_test() doesn't have a DEPENDS attribute.
+#This means you need to run 'make spiflash_test_collect', before running ctest.
+add_custom_target(spiflash_test_collect ALL
+        WORKING_DIRECTORY
+            ${CMAKE_CURRENT_BINARY_DIR}
+        COMMENT
+            "Dummy target to collect test dependencies."
+        DEPENDS
+            spiflash_test
+        VERBATIM
+    )
+
 if(CMAKE_BUILD_TYPE STREQUAL "fpga")
   #gw_project_rules_vivado() function is defined in the parent CMakeLists.txt.
   gw_project_rules_vivado(
@@ -10,7 +23,7 @@ else()
   gw_project_rules_verilator(
       TOP_MODULE sim_main
       PROJECT_NAME spiflash_test
-      MEM_FILE_TARGET spiflash_test_ram
+      MEM_FILE_TARGET cmem_to_flash_vector
       VERILATOR_CPP_FLAGS
           "-I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/ -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang -I${PROJECT_SOURCE_DIR}/gw/components/spiflash/sim/"
       VERILATOR_LD_FLAGS
